--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fas fa-paper-plane"></i> contact@example.com</p>
-                <p><i class="fas fa-phone-square-alt"></i> 0123456789</p>
+                <p><i class="fas fa-paper-plane"></i> rohithkumarinavolu596@gmail.com</p>
+                <p><i class="fas fa-phone-square-alt"></i> 9515211993, 8095887966</p>
                 <div class="social-icons">
                     <a href="https://facebook.com/"><i class="fab fa-facebook"></i></a>
                     <a href=""><i class="fab fa-twitter-square"></i></a>
