--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fas fa-paper-plane"></i> rohithkumarinavolu596@gmail.com</p>
-                <p><i class="fas fa-phone-square-alt"></i> 9515211993, 8095887966</p>
+                <p><i class="fas fa-paper-plane"></i> contact@example.com</p>
+                <p><i class="fas fa-phone-square-alt"></i> 0123456789</p>
                 <div class="social-icons">
                     <a href="https://facebook.com/"><i class="fab fa-facebook"></i></a>
                     <a href=""><i class="fab fa-twitter-square"></i></a>
@@ -163,8 +163,6 @@
     </div>
 </div>
 
-
-
 <script>
 
     var tablinks = document.getElementsByClassName("tab-links");
@@ -195,23 +193,38 @@
     }
 
 </script>
+
 <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbywGi3RqJHiu6oxkjwTM1Iqrfk9Hj4LSuNPOk4jNT3q-uJpYOjaRpxLiMS1ESY075A6sg/exec' // add your own app script link here
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbywGi3RqJHiu6oxkjwTM1Iqrfk9Hj4LSuNPOk4jNT3q-uJpYOjaRpxLiMS1ESY075A6sg/exec'
     const form = document.forms['submit-to-google-sheet']
     const msg = document.getElementById("msg")
   
     form.addEventListener('submit', e => {
       e.preventDefault()
-      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-        .then(response => {
-            msg.innerHTML = "Message sent successfully"
-            setTimeout(function(){
-                msg.innerHTML = ""
-            },5000)
-            form.reset()
-        })
-        .catch(error => console.error('Error!', error.message))
+      fetch(scriptURL, {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(Object.fromEntries(new FormData(form).entries()))
+      })
+      .then(response => response.json())
+      .then(data => {
+        msg.innerHTML = "Message sent successfully"
+        setTimeout(function(){
+            msg.innerHTML = ""
+        },5000)
+        form.reset()
+      })
+      .catch(error => {
+        console.error('Error!', error.message)
+        msg.innerHTML = "Error sending message"
+        setTimeout(function(){
+            msg.innerHTML = ""
+        },5000)
+      })
     })
-  </script>
+</script>
+
 </body>
 </html>
