--- a/index.html
+++ b/index.html
@@ -164,7 +164,6 @@
 </div>
 
 <script>
-
     var tablinks = document.getElementsByClassName("tab-links");
     var tabcontents = document.getElementsByClassName("tab-contents");
 
@@ -178,24 +177,21 @@
         event.currentTarget.classList.add("active-link");
         document.getElementById(tabname).classList.add("active-tab");
     }
-
 </script>
 
 <script>
-
-    var sidemeu = document.getElementById("sidemenu");
+    var sidemenu = document.getElementById("sidemenu");
 
     function openmenu(){
-        sidemeu.style.right = "0";
+        sidemenu.style.right = "0";
     }
     function closemenu(){
-        sidemeu.style.right = "-200px";
+        sidemenu.style.right = "-200px";
     }
-
 </script>
 
 <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbywGi3RqJHiu6oxkjwTM1Iqrfk9Hj4LSuNPOk4jNT3q-uJpYOjaRpxLiMS1ESY075A6sg/exec'
+    const scriptURL = 'https://script.google.com/macros/s/AKfycby-XQVUsMkmdwlhPL3dX2Z9C_BS0zhjhkbXXKyjaiRYx4Lg2MGInuIFNyGkY6tnwMCVCQ/exec'
     const form = document.forms['submit-to-google-sheet']
     const msg = document.getElementById("msg")
   
@@ -218,7 +214,7 @@
       })
       .catch(error => {
         console.error('Error!', error.message)
-        msg.innerHTML = "Error sending message"
+        msg.innerHTML = "Error sending message: " + error.message
         setTimeout(function(){
             msg.innerHTML = ""
         },5000)
