--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </div>
     </div>
     <div class="copyright">
-        <p>Copyright © Kevin. Made wtih <i class="fas fa-heart"></i> by <a href="https://www.youtube.com/channel/UCkjoHfkLEy7ZT4bA2myJ8xA?sub_confirmation=1">Easy Tutorials</a></p>
+        <p>Copyright © Rohith. Made wtih <i class="fas fa-heart"></i> by <a href="https://www.youtube.com/channel/UCkjoHfkLEy7ZT4bA2myJ8xA?sub_confirmation=1">Easy Tutorials</a></p>
     </div>
 </div>
 
@@ -191,36 +191,23 @@
 </script>
 
 <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycby-XQVUsMkmdwlhPL3dX2Z9C_BS0zhjhkbXXKyjaiRYx4Lg2MGInuIFNyGkY6tnwMCVCQ/exec'
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbyPqTkoa1xDwJ2cED3dK1E4GO2mWxLneSsPCIt4TgMs-onolRGby4jQCW1zwVGN_86r/exec' // add your own app script link here
     const form = document.forms['submit-to-google-sheet']
     const msg = document.getElementById("msg")
   
     form.addEventListener('submit', e => {
       e.preventDefault()
-      fetch(scriptURL, {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify(Object.fromEntries(new FormData(form).entries()))
-      })
-      .then(response => response.json())
-      .then(data => {
-        msg.innerHTML = "Message sent successfully"
-        setTimeout(function(){
-            msg.innerHTML = ""
-        },5000)
-        form.reset()
-      })
-      .catch(error => {
-        console.error('Error!', error.message)
-        msg.innerHTML = "Error sending message: " + error.message
-        setTimeout(function(){
-            msg.innerHTML = ""
-        },5000)
-      })
+      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response => {
+            msg.innerHTML = "Message sent successfully"
+            setTimeout(function(){
+                msg.innerHTML = ""
+            },5000)
+            form.reset()
+        })
+        .catch(error => console.error('Error!', error.message))
     })
-</script>
+  </script>
 
 </body>
 </html>
